# GithubOrgRust

./: .gitignore  Cargo.toml  Makefile.toml  README.md
migrations/: 00_create_org_table.sql  01_create_repo_table.sql  02_create_repoQuery_table.sql
src/: glue.rs  lib.rs  main.rs  types.rs
src/db/: info.rs  mod.rs  sqlx.rs
src/db/diesel/: diesel.rs  mod.rs
src/github/: example.rs  mod.rs  orgQuery.graphql  orgQuery.rs  org_query.rs
