[package]
name = "GithubOrgRust"
version = "0.1.0"
authors = ["Hal Henke <halhenke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.6"
graphql_client = "0.9.0"
sqlx = { version = "0.5.2", features = ["sqlite", "runtime-async-std-native-tls"] }
