[package]
name = "GithubOrgRust"
version = "0.1.0"
authors = ["Hal Henke <halhenke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-std = "1.9.0"
chrono = "0.4.19"
diesel = "1.4.6"
dotenv = "0.15.0"
env_logger = "0.8.3"
envy = "0.4.2"
graphql_client = "0.9.0"
log = "0.4.14"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.3",  features = ["json", "blocking"] }
serde = "1.0.125"
sqlx = { version = "0.5.2", features = ["sqlite", "runtime-async-std-native-tls"] }
structopt = "0.3.21"


[[example]]
name = "github"
path = "src/github/example.rs"


# [config]
# github_api_token = "***REMOVED***"
